# nhsdigital.eps-spine-shared

./: .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  Makefile  README.md  pyproject.toml  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  pull_request.yaml  release.yaml  release.yml
release_notes/: v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.5.3.md  v0.6.1.md  v0.6.2.md  v0.6.4.md  v0.6.5.md
src/eps_spine_shared/: README.md  errors.py
src/eps_spine_shared/common/: checksum_util.py  dynamodb_datastore.py  dynamodb_index.py  dynamodb_query.py  indexes.py
src/eps_spine_shared/common/prescription/: issue.py  next_activity_generator.py  record.py  repeat_dispense.py  single_prescribe.py
src/eps_spine_shared/interactions/: common.py  create_prescription.py  updates.py
src/eps_spine_shared/nhsfundamentals/: mim_rules.py  time_utilities.py
src/eps_spine_shared/spinecore/: base_utilities.py  changelog.py
src/eps_spine_shared/validation/: common.py  constants.py  create.py  message_vocab.py
tests/common/: checksum_util_test.py  dynamodb_datastore_test.py
tests/common/prescription/: build_indexes_test.py  include_next_activity_for_instance_test.py  next_activity_generator_test.py  record_test.py  return_changed_issue_list_test.py
tests/interactions/: updates_test.py
tests/nhsfundamentals/: time_utilities_test.py
tests/spinecore/: base_utilities_test.py
tests/validation/: common_test.py  create_test.py
